commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charterrorbarsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charterrorbarsloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="ea250-101">此对象表示图表的误差线的属性。</span><span class="sxs-lookup"><span data-stu-id="ea250-101">This object represents the attributes for a chart's error bars.</span></span>
+      此对象表示图表的误差线的属性。
 
-      <span data-ttu-id="ea250-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea250-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartErrorBarsLoadOptions
     fullName: Excel.Interfaces.ChartErrorBarsLoadOptions
     langs:
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#type:member'
       - 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#$all:member'
-    summary: '<span data-ttu-id="ea250-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="ea250-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="ea250-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="ea250-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="ea250-105">).</span><span class="sxs-lookup"><span data-stu-id="ea250-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#endStyleCap:member'
     summary: |-
-      <span data-ttu-id="ea250-106">指定误差线是否具有终止端样式。</span><span class="sxs-lookup"><span data-stu-id="ea250-106">Specifies whether or not the error bars have an end style cap.</span></span>
+      指定误差线是否具有最终样式帽。
 
-      <span data-ttu-id="ea250-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea250-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endStyleCap
     fullName: endStyleCap
     langs:
@@ -47,9 +47,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="ea250-108">指定误差线的格式类型。</span><span class="sxs-lookup"><span data-stu-id="ea250-108">Specifies the formatting type of the error bars.</span></span>
+      指定误差线的格式类型。
 
-      <span data-ttu-id="ea250-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea250-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -62,9 +62,9 @@ items:
           - 'excel!Excel.Interfaces.ChartErrorBarsFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#include:member'
     summary: |-
-      <span data-ttu-id="ea250-110">指定包含误差线的哪些部分。</span><span class="sxs-lookup"><span data-stu-id="ea250-110">Specifies which parts of the error bars to include.</span></span>
+      指定包含误差线的哪些部分。
 
-      <span data-ttu-id="ea250-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea250-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: include
     fullName: include
     langs:
@@ -77,9 +77,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="ea250-112">误差线标记的区域类型。</span><span class="sxs-lookup"><span data-stu-id="ea250-112">The type of range marked by the error bars.</span></span>
+      误差线标记的区域类型。
 
-      <span data-ttu-id="ea250-113">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea250-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -92,9 +92,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="ea250-114">指定是否显示误差线。</span><span class="sxs-lookup"><span data-stu-id="ea250-114">Specifies whether or not the error bars are displayed.</span></span>
+      指定是否显示误差线。
 
-      <span data-ttu-id="ea250-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea250-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
