--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.tablescopedcollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.tablescopedcollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.TableScopedCollection:class'
     summary: |-
-      <span data-ttu-id="e9cb8-101">表示已确定范围的表的集合。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-101">Represents a scoped collection of tables.</span></span> <span data-ttu-id="e9cb8-102">对于每个表，其左上角都被认为是其定位点位置，表按从上到下，然后从左到右进行排序。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-102">For each table its top-left corner is considered its anchor location and the tables are sorted top to bottom and then left to right.</span></span>
+      表示已确定范围的表的集合。 对于每个表，其左上角都被认为是其定位点位置，表按从上到下，然后从左到右进行排序。
 
-      <span data-ttu-id="e9cb8-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e9cb8-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.TableScopedCollection
     fullName: Excel.TableScopedCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.TableScopedCollection#context:member'
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.TableScopedCollection#load:member(3)'
       - 'excel!Excel.TableScopedCollection#toJSON:member(1)'
   - uid: 'excel!Excel.TableScopedCollection#context:member'
-    summary: <span data-ttu-id="e9cb8-104">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-104">The request context associated with the object.</span></span> <span data-ttu-id="e9cb8-105">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-105">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TableScopedCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="e9cb8-106">获取集合中的表数量。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-106">Gets the number of tables in the collection.</span></span>
+      获取集合中的表数量。
 
-      <span data-ttu-id="e9cb8-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e9cb8-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -53,9 +53,9 @@ items:
         description: ''
   - uid: 'excel!Excel.TableScopedCollection#getFirst:member(1)'
     summary: |-
-      <span data-ttu-id="e9cb8-108">获取集合中的第一个表格。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-108">Gets the first table in the collection.</span></span> <span data-ttu-id="e9cb8-109">集合中的表格按照从上到下、从左到右的顺序排列，因此左上表格是集合中的第一个表格。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-109">The tables in the collection are sorted top to bottom and left to right, such that top left table is the first table in the collection.</span></span>
+      获取集合中的第一个表格。 集合中的表格按照从上到下、从左到右的顺序排列，因此左上表格是集合中的第一个表格。
 
-      <span data-ttu-id="e9cb8-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e9cb8-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getFirst()
     fullName: getFirst()
     langs:
@@ -69,9 +69,9 @@ items:
         description: ''
   - uid: 'excel!Excel.TableScopedCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="e9cb8-111">按名称或 ID 获取表。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-111">Gets a table by Name or ID.</span></span>
+      按名称或 ID 获取表。
 
-      <span data-ttu-id="e9cb8-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e9cb8-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -85,11 +85,11 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="e9cb8-113">要检索的表的名称或 ID。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-113">Name or ID of the table to be retrieved.</span></span>
+          description: 要检索的表的名称或 ID。
           type:
             - string
   - uid: 'excel!Excel.TableScopedCollection#items:member'
-    summary: <span data-ttu-id="e9cb8-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-114">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -101,7 +101,7 @@ items:
         type:
           - 'excel!Excel.TableScopedCollection#items~0:complex'
   - uid: 'excel!Excel.TableScopedCollection#load:member(1)'
-    summary: <span data-ttu-id="e9cb8-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e9cb8-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -115,11 +115,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="e9cb8-117">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-117">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.TableScopedCollection#load~0:complex'
   - uid: 'excel!Excel.TableScopedCollection#load:member(2)'
-    summary: <span data-ttu-id="e9cb8-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e9cb8-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -133,11 +133,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="e9cb8-120">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-120">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.TableScopedCollection#load:member(3)'
-    summary: <span data-ttu-id="e9cb8-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="e9cb8-122">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-122">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -151,11 +151,11 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="e9cb8-123">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-123">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.TableScopedCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="e9cb8-124">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="e9cb8-124">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="e9cb8-125">.</span><span class="sxs-lookup"><span data-stu-id="e9cb8-125"></span></span> <span data-ttu-id="e9cb8-126">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="e9cb8-126"></span></span><!-- --><span data-ttu-id="e9cb8-127">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.TableScopedCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TableScopedCollectionData`</span><span class="sxs-lookup"><span data-stu-id="e9cb8-127">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.TableScopedCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.TableScopedCollectionData`</span></span><!-- --><span data-ttu-id="e9cb8-128">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="e9cb8-128">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.TableScopedCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TableScopedCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -168,7 +168,7 @@ items:
           - 'excel!Excel.Interfaces.TableScopedCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -176,7 +176,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -206,7 +206,7 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.Interfaces.TableScopedCollectionData:interface'
     name: Excel.Interfaces.TableScopedCollectionData
