--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tablesortloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.tablesortloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.TableSortLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="88e90-101">管理对 Table 对象的排序操作。</span><span class="sxs-lookup"><span data-stu-id="88e90-101">Manages sorting operations on Table objects.</span></span>
+      管理对 Table 对象的排序操作。
 
-      <span data-ttu-id="88e90-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88e90-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TableSortLoadOptions
     fullName: Excel.Interfaces.TableSortLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.TableSortLoadOptions#matchCase:member'
       - 'excel!Excel.Interfaces.TableSortLoadOptions#method:member'
   - uid: 'excel!Excel.Interfaces.TableSortLoadOptions#$all:member'
-    summary: '<span data-ttu-id="88e90-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="88e90-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="88e90-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="88e90-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="88e90-105">).</span><span class="sxs-lookup"><span data-stu-id="88e90-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableSortLoadOptions#fields:member'
     summary: |-
-      <span data-ttu-id="88e90-106">表示最后一次对表排序所使用的当前条件。</span><span class="sxs-lookup"><span data-stu-id="88e90-106">Represents the current conditions used to last sort the table.</span></span> <span data-ttu-id="88e90-107">只读。</span><span class="sxs-lookup"><span data-stu-id="88e90-107">Read-only.</span></span>
+      指定用于最后对表进行排序的当前条件。
 
-      <span data-ttu-id="88e90-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88e90-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fields
     fullName: fields
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableSortLoadOptions#matchCase:member'
     summary: |-
-      <span data-ttu-id="88e90-109">表示最后一次对表进行排序时大小写是否有影响。</span><span class="sxs-lookup"><span data-stu-id="88e90-109">Represents whether the casing impacted the last sort of the table.</span></span> <span data-ttu-id="88e90-110">只读。</span><span class="sxs-lookup"><span data-stu-id="88e90-110">Read-only.</span></span>
+      指定大小写是否影响表的最后一个排序。
 
-      <span data-ttu-id="88e90-111">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88e90-111">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: matchCase
     fullName: matchCase
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableSortLoadOptions#method:member'
     summary: |-
-      <span data-ttu-id="88e90-112">表示最后一次对表排序所使用的中文字符排序方法。</span><span class="sxs-lookup"><span data-stu-id="88e90-112">Represents Chinese character ordering method last used to sort the table.</span></span> <span data-ttu-id="88e90-113">只读。</span><span class="sxs-lookup"><span data-stu-id="88e90-113">Read-only.</span></span>
+      表示最后一次对表排序所使用的中文字符排序方法。
 
-      <span data-ttu-id="88e90-114">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="88e90-114">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: method
     fullName: method
     langs:
