commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.applicationloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.applicationloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="61a4d-101">表示用于管理工作簿的 Excel 应用程序。</span><span class="sxs-lookup"><span data-stu-id="61a4d-101">Represents the Excel application that manages the workbook.</span></span>
+      表示用于管理工作簿的 Excel 应用程序。
 
-      <span data-ttu-id="61a4d-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61a4d-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ApplicationLoadOptions
     fullName: Excel.Interfaces.ApplicationLoadOptions
     langs:
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationState:member'
       - 'excel!Excel.Interfaces.ApplicationLoadOptions#iterativeCalculation:member'
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#$all:member'
-    summary: '<span data-ttu-id="61a4d-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="61a4d-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="61a4d-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="61a4d-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="61a4d-105">).</span><span class="sxs-lookup"><span data-stu-id="61a4d-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationEngineVersion:member'
     summary: |-
-      <span data-ttu-id="61a4d-106">返回用于上次完整重新计算的 Excel 计算引擎版本。</span><span class="sxs-lookup"><span data-stu-id="61a4d-106">Returns the Excel calculation engine version used for the last full recalculation.</span></span> <span data-ttu-id="61a4d-107">只读。</span><span class="sxs-lookup"><span data-stu-id="61a4d-107">Read-only.</span></span>
+      返回用于上次完整重新计算的 Excel 计算引擎版本。
 
-      <span data-ttu-id="61a4d-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61a4d-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationEngineVersion
     fullName: calculationEngineVersion
     langs:
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationMode:member'
     summary: |-
-      <span data-ttu-id="61a4d-109">返回工作簿中使用的计算模式，如 CalculationMode 中的常量所定义。</span><span class="sxs-lookup"><span data-stu-id="61a4d-109">Returns the calculation mode used in the workbook, as defined by the constants in Excel.CalculationMode.</span></span> <span data-ttu-id="61a4d-110">可能的值包括：`Automatic`</span><span class="sxs-lookup"><span data-stu-id="61a4d-110">Possible values are: `Automatic`</span></span><!-- --><span data-ttu-id="61a4d-111">，Excel 控制重新计算的位置;`AutomaticExceptTables`</span><span class="sxs-lookup"><span data-stu-id="61a4d-111">, where Excel controls recalculation; `AutomaticExceptTables`</span></span><!-- --><span data-ttu-id="61a4d-112">，Excel 在其中控制重新计算，但忽略表中的更改。`Manual`</span><span class="sxs-lookup"><span data-stu-id="61a4d-112">, where Excel controls recalculation but ignores changes in tables; `Manual`</span></span><!-- --><span data-ttu-id="61a4d-113">，在用户请求计算时完成计算。</span><span class="sxs-lookup"><span data-stu-id="61a4d-113">, where calculation is done when the user requests it.</span></span>
+      返回工作簿中使用的计算模式，如 CalculationMode 中的常量所定义。 可能的值包括：`Automatic`<!-- -->，Excel 控制重新计算的位置;`AutomaticExceptTables`<!-- -->，Excel 在其中控制重新计算，但忽略表中的更改。`Manual`<!-- -->，在用户请求计算时完成计算。
 
-      <span data-ttu-id="61a4d-114">\[[API 集： ExcelApi 1.1 for get，1.8 （用于设置）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61a4d-114">\[ [API set: ExcelApi 1.1 for get, 1.8 for set](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1 for get，1.8 （用于设置）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationMode
     fullName: calculationMode
     langs:
@@ -61,9 +61,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#calculationState:member'
     summary: |-
-      <span data-ttu-id="61a4d-115">返回应用程序的计算状态。</span><span class="sxs-lookup"><span data-stu-id="61a4d-115">Returns the calculation state of the application.</span></span> <span data-ttu-id="61a4d-116">有关详细信息，请参阅 Excel.CalculationState。</span><span class="sxs-lookup"><span data-stu-id="61a4d-116">See Excel.CalculationState for details.</span></span> <span data-ttu-id="61a4d-117">只读。</span><span class="sxs-lookup"><span data-stu-id="61a4d-117">Read-only.</span></span>
+      返回应用程序的计算状态。 有关详细信息，请参阅 Excel.CalculationState。
 
-      <span data-ttu-id="61a4d-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61a4d-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationState
     fullName: calculationState
     langs:
@@ -76,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ApplicationLoadOptions#iterativeCalculation:member'
     summary: |-
-      <span data-ttu-id="61a4d-119">返回“迭代计算”设置。</span><span class="sxs-lookup"><span data-stu-id="61a4d-119">Returns the Iterative Calculation settings.</span></span> <span data-ttu-id="61a4d-120">在 Windows 和 Mac 上的 Excel 中，这些设置将应用于 Excel 应用程序。</span><span class="sxs-lookup"><span data-stu-id="61a4d-120">In Excel on Windows and Mac, the settings will apply to the Excel Application.</span></span> <span data-ttu-id="61a4d-121">在 Excel 中的 web 和其他平台上，这些设置将应用于活动工作簿。</span><span class="sxs-lookup"><span data-stu-id="61a4d-121">In Excel on the web and other platforms, the settings will apply to the active workbook.</span></span>
+      返回“迭代计算”设置。 在 Windows 和 Mac 上的 Excel 中，这些设置将应用于 Excel 应用程序。 在 Excel 中的 web 和其他平台上，这些设置将应用于活动工作簿。
 
-      <span data-ttu-id="61a4d-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61a4d-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: iterativeCalculation
     fullName: iterativeCalculation
     langs:
