--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.linedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.linedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.LineData:interface'
-    summary: <span data-ttu-id="ace50-101">描述通过调用返回的数据的接口`line.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="ace50-101">An interface describing the data returned by calling `line.toJSON()`</span></span><!-- --><span data-ttu-id="ace50-102">.</span><span class="sxs-lookup"><span data-stu-id="ace50-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`line.toJSON()`<!-- -->.
     name: Excel.Interfaces.LineData
     fullName: Excel.Interfaces.LineData
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.Interfaces.LineData#isEndConnected:member'
   - uid: 'excel!Excel.Interfaces.LineData#beginArrowheadLength:member'
     summary: |-
-      <span data-ttu-id="ace50-103">表示指定线条始端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="ace50-103">Represents the length of the arrowhead at the beginning of the specified line.</span></span>
+      表示指定线条始端的箭头长度。
 
-      <span data-ttu-id="ace50-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginArrowheadLength
     fullName: beginArrowheadLength
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.Interfaces.LineData#beginArrowheadLength~0:complex'
   - uid: 'excel!Excel.Interfaces.LineData#beginArrowheadStyle:member'
     summary: |-
-      <span data-ttu-id="ace50-105">表示指定线条始端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="ace50-105">Represents the style of the arrowhead at the beginning of the specified line.</span></span>
+      表示指定线条始端的箭头样式。
 
-      <span data-ttu-id="ace50-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginArrowheadStyle
     fullName: beginArrowheadStyle
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.Interfaces.LineData#beginArrowheadStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.LineData#beginArrowheadWidth:member'
     summary: |-
-      <span data-ttu-id="ace50-107">表示指定线条始端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="ace50-107">Represents the width of the arrowhead at the beginning of the specified line.</span></span>
+      表示指定线条始端的箭头宽度。
 
-      <span data-ttu-id="ace50-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginArrowheadWidth
     fullName: beginArrowheadWidth
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.Interfaces.LineData#beginArrowheadWidth~0:complex'
   - uid: 'excel!Excel.Interfaces.LineData#beginConnectedSite:member'
     summary: |-
-      <span data-ttu-id="ace50-109">表示连接线始端所连接的连接站点。</span><span class="sxs-lookup"><span data-stu-id="ace50-109">Represents the connection site to which the beginning of a connector is connected.</span></span> <span data-ttu-id="ace50-110">只读。</span><span class="sxs-lookup"><span data-stu-id="ace50-110">Read-only.</span></span> <span data-ttu-id="ace50-111">当线条的始端没有附加到任何形状时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="ace50-111">Returns null when the beginning of the line is not attached to any shape.</span></span>
+      表示连接线始端所连接的连接站点。 当线条的始端没有附加到任何形状时，返回 null。
 
-      <span data-ttu-id="ace50-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginConnectedSite
     fullName: beginConnectedSite
     langs:
@@ -83,9 +83,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.LineData#connectorType:member'
     summary: |-
-      <span data-ttu-id="ace50-113">表示线条的连接器类型。</span><span class="sxs-lookup"><span data-stu-id="ace50-113">Represents the connector type for the line.</span></span>
+      表示线条的连接器类型。
 
-      <span data-ttu-id="ace50-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: connectorType
     fullName: connectorType
     langs:
@@ -98,9 +98,9 @@ items:
           - 'excel!Excel.Interfaces.LineData#connectorType~0:complex'
   - uid: 'excel!Excel.Interfaces.LineData#endArrowheadLength:member'
     summary: |-
-      <span data-ttu-id="ace50-115">表示指定线条末端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="ace50-115">Represents the length of the arrowhead at the end of the specified line.</span></span>
+      表示指定线条末端的箭头长度。
 
-      <span data-ttu-id="ace50-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endArrowheadLength
     fullName: endArrowheadLength
     langs:
@@ -113,9 +113,9 @@ items:
           - 'excel!Excel.Interfaces.LineData#endArrowheadLength~0:complex'
   - uid: 'excel!Excel.Interfaces.LineData#endArrowheadStyle:member'
     summary: |-
-      <span data-ttu-id="ace50-117">表示指定线条末端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="ace50-117">Represents the style of the arrowhead at the end of the specified line.</span></span>
+      表示指定线条末端的箭头样式。
 
-      <span data-ttu-id="ace50-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endArrowheadStyle
     fullName: endArrowheadStyle
     langs:
@@ -128,9 +128,9 @@ items:
           - 'excel!Excel.Interfaces.LineData#endArrowheadStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.LineData#endArrowheadWidth:member'
     summary: |-
-      <span data-ttu-id="ace50-119">表示指定线条末端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="ace50-119">Represents the width of the arrowhead at the end of the specified line.</span></span>
+      表示指定线条末端的箭头宽度。
 
-      <span data-ttu-id="ace50-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endArrowheadWidth
     fullName: endArrowheadWidth
     langs:
@@ -143,9 +143,9 @@ items:
           - 'excel!Excel.Interfaces.LineData#endArrowheadWidth~0:complex'
   - uid: 'excel!Excel.Interfaces.LineData#endConnectedSite:member'
     summary: |-
-      <span data-ttu-id="ace50-121">表示连接线末端所连接的连接站点。</span><span class="sxs-lookup"><span data-stu-id="ace50-121">Represents the connection site to which the end of a connector is connected.</span></span> <span data-ttu-id="ace50-122">只读。</span><span class="sxs-lookup"><span data-stu-id="ace50-122">Read-only.</span></span> <span data-ttu-id="ace50-123">当线条的末端没有附加到任何形状时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="ace50-123">Returns null when the end of the line is not attached to any shape.</span></span>
+      表示连接线末端所连接的连接站点。 当线条的末端没有附加到任何形状时，返回 null。
 
-      <span data-ttu-id="ace50-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endConnectedSite
     fullName: endConnectedSite
     langs:
@@ -158,9 +158,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.LineData#id:member'
     summary: |-
-      <span data-ttu-id="ace50-125">表示形状标识符。</span><span class="sxs-lookup"><span data-stu-id="ace50-125">Represents the shape identifier.</span></span> <span data-ttu-id="ace50-126">只读。</span><span class="sxs-lookup"><span data-stu-id="ace50-126">Read-only.</span></span>
+      指定形状标识符。
 
-      <span data-ttu-id="ace50-127">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-127">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -173,9 +173,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.LineData#isBeginConnected:member'
     summary: |-
-      <span data-ttu-id="ace50-128">指定指定线条的始端是否连接到形状。</span><span class="sxs-lookup"><span data-stu-id="ace50-128">Specifies whether or not the beginning of the specified line is connected to a shape.</span></span> <span data-ttu-id="ace50-129">只读。</span><span class="sxs-lookup"><span data-stu-id="ace50-129">Read-only.</span></span>
+      指定是否将指定线条的起点连接到形状。
 
-      <span data-ttu-id="ace50-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isBeginConnected
     fullName: isBeginConnected
     langs:
@@ -188,9 +188,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.LineData#isEndConnected:member'
     summary: |-
-      <span data-ttu-id="ace50-131">指定指定线条的末端是否连接到形状。</span><span class="sxs-lookup"><span data-stu-id="ace50-131">Specifies whether or not the end of the specified line is connected to a shape.</span></span> <span data-ttu-id="ace50-132">只读。</span><span class="sxs-lookup"><span data-stu-id="ace50-132">Read-only.</span></span>
+      指定是否将指定线条的终点连接到形状。
 
-      <span data-ttu-id="ace50-133">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ace50-133">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEndConnected
     fullName: isEndConnected
     langs:
