--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartseriesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.chartseriesupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData:interface'
-    summary: '<span data-ttu-id="362de-101">一个用于更新 ChartSeries 对象上的数据的接口，可用于`chartSeries.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="362de-101">An interface for updating data on the ChartSeries object, for use in `chartSeries.set({ ... })`</span></span><!-- --><span data-ttu-id="362de-102">.</span><span class="sxs-lookup"><span data-stu-id="362de-102"></span></span>'
+    summary: '一个用于更新 ChartSeries 对象上的数据的接口，可用于`chartSeries.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartSeriesUpdateData
     fullName: Excel.Interfaces.ChartSeriesUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartSeriesUpdateData#name:member'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="362de-103">表示图表系列的格式，包括填充和线条格式。</span><span class="sxs-lookup"><span data-stu-id="362de-103">Represents the formatting of a chart series, which includes fill and line formatting.</span></span>
+      表示图表系列的格式，包括填充和线条格式。
 
-      <span data-ttu-id="362de-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="362de-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartSeriesUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="362de-105">表示图表中某个系列的名称。</span><span class="sxs-lookup"><span data-stu-id="362de-105">Represents the name of a series in a chart.</span></span>
+      指定图表中系列的名称。
 
-      <span data-ttu-id="362de-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="362de-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
