--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartlegendupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartlegendupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
-    summary: '<span data-ttu-id="2ad39-101">一个用于更新 ChartLegend 对象上的数据的接口，可用于`chartLegend.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="2ad39-101">An interface for updating data on the ChartLegend object, for use in `chartLegend.set({ ... })`</span></span><!-- --><span data-ttu-id="2ad39-102">.</span><span class="sxs-lookup"><span data-stu-id="2ad39-102"></span></span>'
+    summary: '一个用于更新 ChartLegend 对象上的数据的接口，可用于`chartLegend.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartLegendUpdateData
     fullName: Excel.Interfaces.ChartLegendUpdateData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="2ad39-103">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="2ad39-103">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span>
+      表示图表图例的格式，包括填充和字体格式。
 
-      <span data-ttu-id="2ad39-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ad39-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -30,9 +30,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#overlay:member'
     summary: |-
-      <span data-ttu-id="2ad39-105">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="2ad39-105">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      指定图表图例是否应与图表的主体重叠。
 
-      <span data-ttu-id="2ad39-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ad39-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#position:member'
     summary: |-
-      <span data-ttu-id="2ad39-107">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="2ad39-107">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="2ad39-108">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="2ad39-108">See Excel.ChartLegendPosition for details.</span></span>
+      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
-      <span data-ttu-id="2ad39-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ad39-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendUpdateData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="2ad39-110">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="2ad39-110">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      指定 ChartLegend 是否可见。
 
-      <span data-ttu-id="2ad39-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ad39-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
