--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartaxisformat.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartaxisformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartAxisFormat:class'
     summary: |-
-      <span data-ttu-id="2ffa3-101">封装图表坐标轴的格式属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-101">Encapsulates the format properties for the chart axis.</span></span>
+      封装图表坐标轴的格式属性。
 
-      <span data-ttu-id="2ffa3-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ffa3-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartAxisFormat
     fullName: Excel.ChartAxisFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAxisFormat#context:member'
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.ChartAxisFormat#set:member(2)'
       - 'excel!Excel.ChartAxisFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartAxisFormat#context:member'
-    summary: <span data-ttu-id="2ffa3-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-103">The request context associated with the object.</span></span> <span data-ttu-id="2ffa3-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAxisFormat#fill:member'
     summary: |-
-      <span data-ttu-id="2ffa3-105">表示图表填充格式。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-105">Represents chart fill formatting.</span></span> <span data-ttu-id="2ffa3-106">只读。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-106">Read-only.</span></span>
+      指定图表填充格式。
 
-      <span data-ttu-id="2ffa3-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ffa3-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartAxisFormat#font:member'
     summary: |-
-      <span data-ttu-id="2ffa3-108">表示图表坐标轴元素的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-108">Represents the font attributes (font name, font size, color, etc.) for a chart axis element.</span></span> <span data-ttu-id="2ffa3-109">只读。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-109">Read-only.</span></span>
+      指定图表轴元素的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="2ffa3-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ffa3-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.ChartFont:class'
   - uid: 'excel!Excel.ChartAxisFormat#line:member'
     summary: |-
-      <span data-ttu-id="2ffa3-111">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-111">Represents chart line formatting.</span></span> <span data-ttu-id="2ffa3-112">只读。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-112">Read-only.</span></span>
+      指定图表线格式。
 
-      <span data-ttu-id="2ffa3-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2ffa3-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
     fullName: line
     langs:
@@ -82,7 +82,7 @@ items:
         type:
           - 'excel!Excel.ChartLineFormat:class'
   - uid: 'excel!Excel.ChartAxisFormat#load:member(1)'
-    summary: <span data-ttu-id="2ffa3-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2ffa3-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -96,11 +96,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="2ffa3-116">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-116">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartAxisFormatLoadOptions:interface'
   - uid: 'excel!Excel.ChartAxisFormat#load:member(2)'
-    summary: <span data-ttu-id="2ffa3-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2ffa3-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -114,11 +114,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="2ffa3-119">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-119">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartAxisFormat#load:member(3)'
-    summary: <span data-ttu-id="2ffa3-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="2ffa3-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -136,7 +136,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="2ffa3-122">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-122">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -144,9 +144,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ChartAxisFormat#set:member(1)'
-    summary: '<span data-ttu-id="2ffa3-123">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-123">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="2ffa3-124">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-124">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="2ffa3-125">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="2ffa3-125">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartAxisFormat): void`
     name: 'set(properties, options)'
@@ -162,15 +162,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="2ffa3-126">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-126">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartAxisFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="2ffa3-127">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-127">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAxisFormat#set:member(2)'
-    summary: '<span data-ttu-id="2ffa3-128">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-128">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -188,7 +188,7 @@ items:
           type:
             - 'excel!Excel.ChartAxisFormat:class'
   - uid: 'excel!Excel.ChartAxisFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="2ffa3-129">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="2ffa3-129">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="2ffa3-130">.</span><span class="sxs-lookup"><span data-stu-id="2ffa3-130"></span></span> <span data-ttu-id="2ffa3-131">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="2ffa3-131"></span></span><!-- --><span data-ttu-id="2ffa3-132">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartAxisFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartAxisFormatData`</span><span class="sxs-lookup"><span data-stu-id="2ffa3-132">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartAxisFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartAxisFormatData`</span></span><!-- --><span data-ttu-id="2ffa3-133">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="2ffa3-133">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartAxisFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartAxisFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -217,7 +217,7 @@ references:
     name: Excel.Interfaces.ChartAxisFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartAxisFormatUpdateData:interface'
     name: Interfaces.ChartAxisFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartAxisFormatData:interface'
     name: Excel.Interfaces.ChartAxisFormatData
