--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.datavalidationerroralert.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.datavalidationerroralert.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.DataValidationErrorAlert:interface'
     summary: |-
-      <span data-ttu-id="3b520-101">表示数据验证的错误警报属性。</span><span class="sxs-lookup"><span data-stu-id="3b520-101">Represents the error alert properties for the data validation.</span></span>
+      表示数据验证的错误警报属性。
 
-      <span data-ttu-id="3b520-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b520-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.DataValidationErrorAlert
     fullName: Excel.DataValidationErrorAlert
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.DataValidationErrorAlert#title:member'
   - uid: 'excel!Excel.DataValidationErrorAlert#message:member'
     summary: |-
-      <span data-ttu-id="3b520-103">表示错误警报消息。</span><span class="sxs-lookup"><span data-stu-id="3b520-103">Represents error alert message.</span></span>
+      表示错误警报消息。
 
-      <span data-ttu-id="3b520-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b520-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: message
     fullName: message
     langs:
@@ -33,9 +33,9 @@ items:
           - string
   - uid: 'excel!Excel.DataValidationErrorAlert#showAlert:member'
     summary: |-
-      <span data-ttu-id="3b520-105">确定在用户输入无效数据时是否显示错误警报对话框。</span><span class="sxs-lookup"><span data-stu-id="3b520-105">Determines whether to show an error alert dialog or not when a user enters invalid data.</span></span> <span data-ttu-id="3b520-106">默认值为 true。</span><span class="sxs-lookup"><span data-stu-id="3b520-106">The default is true.</span></span>
+      指定当用户输入无效数据时是否显示出错警告对话框。 默认值为 true。
 
-      <span data-ttu-id="3b520-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b520-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAlert
     fullName: showAlert
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.DataValidationErrorAlert#style:member'
     summary: |-
-      <span data-ttu-id="3b520-108">表示数据有效性警报类型，有关详细信息，请参阅 Excel.DataValidationAlertStyle。</span><span class="sxs-lookup"><span data-stu-id="3b520-108">Represents data validation alert type, please see Excel.DataValidationAlertStyle for details.</span></span>
+      数据有效性警报类型，有关详细信息，请参阅 DataValidationAlertStyle。
 
-      <span data-ttu-id="3b520-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b520-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -63,9 +63,9 @@ items:
           - 'excel!Excel.DataValidationErrorAlert#style~0:complex'
   - uid: 'excel!Excel.DataValidationErrorAlert#title:member'
     summary: |-
-      <span data-ttu-id="3b520-110">表示错误警报对话框标题。</span><span class="sxs-lookup"><span data-stu-id="3b520-110">Represents error alert dialog title.</span></span>
+      表示错误警报对话框标题。
 
-      <span data-ttu-id="3b520-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b520-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
