--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegenddata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegenddata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendData:interface'
-    summary: <span data-ttu-id="9a9f2-101">描述通过调用返回的数据的接口`chartLegend.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="9a9f2-101">An interface describing the data returned by calling `chartLegend.toJSON()`</span></span><!-- --><span data-ttu-id="9a9f2-102">.</span><span class="sxs-lookup"><span data-stu-id="9a9f2-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartLegend.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartLegendData
     fullName: Excel.Interfaces.ChartLegendData
     langs:
@@ -21,9 +21,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#format:member'
     summary: |-
-      <span data-ttu-id="9a9f2-103">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-103">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span> <span data-ttu-id="9a9f2-104">只读。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-104">Read-only.</span></span>
+      表示图表图例的格式，包括填充和字体格式。
 
-      <span data-ttu-id="9a9f2-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#height:member'
     summary: |-
-      <span data-ttu-id="9a9f2-106">表示图表上的图例的高度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-106">Represents the height, in points, of the legend on the chart.</span></span> <span data-ttu-id="9a9f2-107">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-107">Null if legend is not visible.</span></span>
+      指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="9a9f2-108">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-108">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -51,9 +51,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendData#left:member'
     summary: |-
-      <span data-ttu-id="9a9f2-109">代表图表图例的左侧（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-109">Represents the left, in points, of a chart legend.</span></span> <span data-ttu-id="9a9f2-110">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-110">Null if legend is not visible.</span></span>
+      指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="9a9f2-111">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-111">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -66,9 +66,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendData#legendEntries:member'
     summary: |-
-      <span data-ttu-id="9a9f2-112">表示图例中 legendEntries 的集合。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-112">Represents a collection of legendEntries in the legend.</span></span> <span data-ttu-id="9a9f2-113">只读。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-113">Read-only.</span></span>
+      表示图例中 legendEntries 的集合。
 
-      <span data-ttu-id="9a9f2-114">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legendEntries
     fullName: legendEntries
     langs:
@@ -81,9 +81,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendData#legendEntries~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#overlay:member'
     summary: |-
-      <span data-ttu-id="9a9f2-115">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-115">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      指定图表图例是否应与图表的主体重叠。
 
-      <span data-ttu-id="9a9f2-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -96,9 +96,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendData#position:member'
     summary: |-
-      <span data-ttu-id="9a9f2-117">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-117">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="9a9f2-118">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-118">See Excel.ChartLegendPosition for details.</span></span>
+      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
-      <span data-ttu-id="9a9f2-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -111,9 +111,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#showShadow:member'
     summary: |-
-      <span data-ttu-id="9a9f2-120">表示图例在图表上是否有阴影。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-120">Represents if the legend has a shadow on the chart.</span></span>
+      指定图例在图表上是否有阴影。
 
-      <span data-ttu-id="9a9f2-121">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-121">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showShadow
     fullName: showShadow
     langs:
@@ -126,9 +126,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendData#top:member'
     summary: |-
-      <span data-ttu-id="9a9f2-122">表示图表图例顶部。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-122">Represents the top of a chart legend.</span></span>
+      指定图表图例的顶端。
 
-      <span data-ttu-id="9a9f2-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -141,9 +141,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartLegendData#visible:member'
     summary: |-
-      <span data-ttu-id="9a9f2-124">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-124">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      指定 ChartLegend 是否可见。
 
-      <span data-ttu-id="9a9f2-125">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-125">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -156,9 +156,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendData#width:member'
     summary: |-
-      <span data-ttu-id="9a9f2-126">表示图表上的图例的宽度（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-126">Represents the width, in points, of the legend on the chart.</span></span> <span data-ttu-id="9a9f2-127">如果图例不可见，则为 Null。</span><span class="sxs-lookup"><span data-stu-id="9a9f2-127">Null if legend is not visible.</span></span>
+      指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      <span data-ttu-id="9a9f2-128">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a9f2-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
