--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.workbookloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.workbookloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="87b53-101">工作簿是顶级对象，其中包含相关的工作簿对象，如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)</span><span class="sxs-lookup"><span data-stu-id="87b53-101">Workbook is the top level object which contains related workbook objects such as worksheets, tables, ranges, etc. To learn more about the workbook object model, read [Work with workbooks using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)</span></span><!-- --><span data-ttu-id="87b53-102">.</span><span class="sxs-lookup"><span data-stu-id="87b53-102"></span></span>
+      工作簿是顶级对象，其中包含相关的工作簿对象，如工作表、表、范围等。若要了解有关工作簿对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作簿](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-workbooks)<!-- -->.
 
-      <span data-ttu-id="87b53-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="87b53-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.WorkbookLoadOptions
     fullName: Excel.Interfaces.WorkbookLoadOptions
     langs:
@@ -21,7 +21,7 @@ items:
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#readOnly:member'
       - 'excel!Excel.Interfaces.WorkbookLoadOptions#tables:member'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#$all:member'
-    summary: '<span data-ttu-id="87b53-104">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="87b53-104">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="87b53-105">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="87b53-105">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="87b53-106">).</span><span class="sxs-lookup"><span data-stu-id="87b53-106"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -34,9 +34,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#application:member'
     summary: |-
-      <span data-ttu-id="87b53-107">表示包含此工作簿的 Excel 应用程序实例。</span><span class="sxs-lookup"><span data-stu-id="87b53-107">Represents the Excel application instance that contains this workbook.</span></span>
+      表示包含此工作簿的 Excel 应用程序实例。
 
-      <span data-ttu-id="87b53-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="87b53-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: application
     fullName: application
     langs:
@@ -49,9 +49,9 @@ items:
           - 'excel!Excel.Interfaces.ApplicationLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#bindings:member'
     summary: |-
-      <span data-ttu-id="87b53-109">表示属于工作簿的绑定的集合。</span><span class="sxs-lookup"><span data-stu-id="87b53-109">Represents a collection of bindings that are part of the workbook.</span></span>
+      表示属于工作簿的绑定的集合。
 
-      <span data-ttu-id="87b53-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="87b53-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
     fullName: bindings
     langs:
@@ -64,9 +64,9 @@ items:
           - 'excel!Excel.Interfaces.BindingCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="87b53-111">获取工作簿名称。</span><span class="sxs-lookup"><span data-stu-id="87b53-111">Gets the workbook name.</span></span> <span data-ttu-id="87b53-112">只读。</span><span class="sxs-lookup"><span data-stu-id="87b53-112">Read-only.</span></span>
+      获取工作簿名称。
 
-      <span data-ttu-id="87b53-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="87b53-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -79,9 +79,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#properties:member'
     summary: |-
-      <span data-ttu-id="87b53-114">获取工作簿属性。</span><span class="sxs-lookup"><span data-stu-id="87b53-114">Gets the workbook properties.</span></span>
+      获取工作簿属性。
 
-      <span data-ttu-id="87b53-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="87b53-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: properties
     fullName: properties
     langs:
@@ -94,9 +94,9 @@ items:
           - 'excel!Excel.Interfaces.DocumentPropertiesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#protection:member'
     summary: |-
-      <span data-ttu-id="87b53-116">返回工作簿的工作簿保护对象。</span><span class="sxs-lookup"><span data-stu-id="87b53-116">Returns workbook protection object for a workbook.</span></span>
+      返回工作簿的保护对象。
 
-      <span data-ttu-id="87b53-117">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="87b53-117">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -109,9 +109,9 @@ items:
           - 'excel!Excel.Interfaces.WorkbookProtectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#readOnly:member'
     summary: |-
-      <span data-ttu-id="87b53-118">如果在只读模式下打开工作簿，则为 True。</span><span class="sxs-lookup"><span data-stu-id="87b53-118">True if the workbook is open in Read-only mode.</span></span> <span data-ttu-id="87b53-119">只读。</span><span class="sxs-lookup"><span data-stu-id="87b53-119">Read-only.</span></span>
+      如果在只读模式下打开工作簿，则为 True。
 
-      <span data-ttu-id="87b53-120">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="87b53-120">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
     fullName: readOnly
     langs:
@@ -124,9 +124,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorkbookLoadOptions#tables:member'
     summary: |-
-      <span data-ttu-id="87b53-121">表示与工作簿关联的表的集合。</span><span class="sxs-lookup"><span data-stu-id="87b53-121">Represents a collection of tables associated with the workbook.</span></span>
+      表示与工作簿关联的表的集合。
 
-      <span data-ttu-id="87b53-122">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="87b53-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
     fullName: tables
     langs:
