--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.cellvalueconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.cellvalueconditionalformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatUpdateData:interface'
-    summary: '<span data-ttu-id="62bfa-101">一个用于更新 CellValueConditionalFormat 对象上的数据的接口，可用于`cellValueConditionalFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="62bfa-101">An interface for updating data on the CellValueConditionalFormat object, for use in `cellValueConditionalFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="62bfa-102">.</span><span class="sxs-lookup"><span data-stu-id="62bfa-102"></span></span>'
+    summary: '一个用于更新 CellValueConditionalFormat 对象上的数据的接口，可用于`cellValueConditionalFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.CellValueConditionalFormatUpdateData
     fullName: Excel.Interfaces.CellValueConditionalFormatUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.CellValueConditionalFormatUpdateData#rule:member'
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="62bfa-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="62bfa-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。
 
-      <span data-ttu-id="62bfa-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="62bfa-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.CellValueConditionalFormatUpdateData#rule:member'
     summary: |-
-      <span data-ttu-id="62bfa-105">表示此条件格式中的 Rule 对象。</span><span class="sxs-lookup"><span data-stu-id="62bfa-105">Represents the Rule object on this conditional format.</span></span>
+      指定此条件格式的 Rule 对象。
 
-      <span data-ttu-id="62bfa-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="62bfa-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
