--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.conditionalrangeborderdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.conditionalrangeborderdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData:interface'
-    summary: <span data-ttu-id="18efa-101">描述通过调用返回的数据的接口`conditionalRangeBorder.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="18efa-101">An interface describing the data returned by calling `conditionalRangeBorder.toJSON()`</span></span><!-- --><span data-ttu-id="18efa-102">.</span><span class="sxs-lookup"><span data-stu-id="18efa-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`conditionalRangeBorder.toJSON()`<!-- -->.
     name: Excel.Interfaces.ConditionalRangeBorderData
     fullName: Excel.Interfaces.ConditionalRangeBorderData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeBorderData#style:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#color:member'
     summary: |-
-      <span data-ttu-id="18efa-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="18efa-103">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="18efa-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="18efa-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex:member'
     summary: |-
-      <span data-ttu-id="18efa-105">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="18efa-105">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="18efa-106">有关详细信息，请参阅 ConditionalRangeBorderIndex。</span><span class="sxs-lookup"><span data-stu-id="18efa-106">See Excel.ConditionalRangeBorderIndex for details.</span></span> <span data-ttu-id="18efa-107">只读。</span><span class="sxs-lookup"><span data-stu-id="18efa-107">Read-only.</span></span>
+      指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
 
-      <span data-ttu-id="18efa-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="18efa-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
     fullName: sideIndex
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex~0:complex'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#style:member'
     summary: |-
-      <span data-ttu-id="18efa-109">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="18efa-109">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="18efa-110">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="18efa-110">See Excel.BorderLineStyle for details.</span></span>
+      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
 
-      <span data-ttu-id="18efa-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="18efa-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
